--- a/department-service/src/main/resources/application.yaml
+++ b/department-service/src/main/resources/application.yaml
@@ -4,4 +4,13 @@ spring:
   config:
     import: "optional:configserver:http://localhost:8088"
 
-
+  jpa:
+    hibernate:
+      ddl-auto: create
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+  datasource:
+    url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/Microservices
+    username: root
+    password: Clearme@1824
+    driver-class-name: com.mysql.cj.jdbc.Driver
