--- a/employee-service/src/main/resources/application.yaml
+++ b/employee-service/src/main/resources/application.yaml
@@ -3,3 +3,14 @@ spring:
     name: employee-service
   config:
     import: "optional:configserver:http://localhost:8088"
+
+  jpa:
+    hibernate:
+      ddl-auto: create
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+  datasource:
+    url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/Microservices
+    username: root
+    password: Clearme@1824
+    driver-class-name: com.mysql.cj.jdbc.Driver
